# rtcros

src/ros2_webcam_stream/: package.xml  setup.cfg  setup.py
src/ros2_webcam_stream/ros2_webcam_stream/: disk_image_publisher.py  rtc.py  stream_video.py
src/ros2_webcam_stream/web/: client.js  fallback.html  index.html  snapshot.html
