<?xml version="1.0"?>
<package format="3">
  <name>ros2_webcam_stream</name>
  <version>0.0.0</version>
  <description>ROS2 package for streaming ROS images and publishing disk images.</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>aiortc</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

